--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "faker": "^3.1.0",
     "firebase": "^3.2.0",
-    "firebase-queue": "^1.5.0"
+    "firebase-queue": "^1.5.0",
+    "rc": "^1.1.6"
   }
 }
