--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "faker": "^3.1.0",
     "firebase": "^3.2.0",
     "firebase-queue": "^1.5.0",
+    "left-pad": "^1.1.1",
     "rc": "^1.1.6"
   }
 }
